--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10"
   },
+  "type": "module",
   "name": "taskmanager",
   "version": "1.0.0",
   "main": "index.js",
